--- a/src/pages/splash/Splash.css
+++ b/src/pages/splash/Splash.css
@@ -1,4 +1,4 @@
-/* .logo_wrapper {
+.logo_wrapper {
   height: 100vh;
   width: 100vw;
   align-items: center;
@@ -21,8 +21,8 @@ body {
 }
 
 .screen {
-  background-color: #55198b; */
-  /* overflow: hidden;
+  /* background-color: #55198b; */
+  overflow: hidden;
   border-radius: 100%;
   animation: grow 5.5s forwards;
 }
@@ -55,4 +55,4 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-} */
+}
