--- a/src/pages/contact/ContactComponent.css
+++ b/src/pages/contact/ContactComponent.css
@@ -1,15 +1,15 @@
 .pdf {
-  width: 80%;
+  width: 100%;
   display: flex;
   justify-content: center;
-  margin: 0 auto;
   margin-top: 5px;
+  
 }
-.centerit {
+.social-media-div {
+  font-size: 2em;
   display: flex;
   justify-content: center;
   margin: 0 auto;
-  margin-top: 5px;
 }
 .contact-main {
   width: 100%;
