FIx lists in ExperienceCard

--- a/src/components/experienceCard/ExperienceCard.css
+++ b/src/components/experienceCard/ExperienceCard.css
@@ -74,6 +74,15 @@
   margin-right: 20px;
   font-family: "Google Sans Regular";
 }
+.experience-card-description ul {
+  padding-left: 20px;
+  margin: 10px 0;
+  list-style-type: disc;
+}
+
+.experience-card-description li {
+  margin-bottom: 5px;
+}
 
 .experience-card-company > a {
   position: relative;
